# pixel-test-2

./: Cargo.toml
src/: main.rs
src/color/: mod.rs  sample_gradient.rs
src/game/: components.rs  constants.rs  mod.rs  plugin.rs
src/game/data/: behaviour.rs  cell.rs  chunk.rs  chunk_texture.rs  loaded_chunks.rs  mod.rs
src/game/systems/: fps_ui.rs  mod.rs  setup.rs
